--- a/public/index.html
+++ b/public/index.html
@@ -1352,6 +1352,148 @@
 				</div>
 			</section>
 			<!-- end sHit-->
+			<!-- start sPopCategories-->
+			<section class="sPopCategories section" id="sPopCategories">
+				<div class="container">
+					<div class="section-title">
+						<h2>Популярные категории</h2>
+					</div>
+					<div class="row">
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Водоснабжение и полив
+								</a><img src="img/pop-item-1.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Мототехника
+								</a><img src="img/pop-item-2.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Обогрев и вентиляция
+								</a><img src="img/pop-item-3.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Продукция STIHL и Viking
+								</a><img src="img/pop-item-4.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Расходные материалы и аксессуары
+								</a><img src="img/pop-item-5.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Садовая техника
+								</a><img src="img/pop-item-6.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Садовый инвентарь и инструменты
+								</a><img src="img/pop-item-7.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Сварочное оборудование
+								</a><img src="img/pop-item-8.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Силовое оборудование
+								</a><img src="img/pop-item-9.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Снегоуборочная техника
+								</a><img src="img/pop-item-10.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-auto">
+							<div class="sPopCategories__item">
+								<a class="sPopCategories__item-title stretched-link" href="#">Стероительные инструменты
+								</a><img src="img/pop-item-11.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sPopCategories-->
+			<!-- start sAllCategories-->
+			<section class="sAllCategories section" id="sAllCategories">
+				<div class="container">
+					<div class="row">
+						<div class="col-10">
+							<div class="sliderAutoWidth sliderAutoWidth--js swiper">
+							</div>
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="categories-item">
+										<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+										</a>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="categories-item">
+										<a class="categories-item__title" href="#">Сварочное оборудование
+										</a>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="categories-item">
+										<a class="categories-item__title" href="#">Аппараты для контактной сварки
+										</a>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="categories-item">
+										<a class="categories-item__title" href="#">Аппараты для плазменной резки
+										</a>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="categories-item">
+										<a class="categories-item__title" href="#">Аппараты для пластика и синтетических материалов
+										</a>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="categories-item">
+										<a class="categories-item__title" href="#">Аппараты для пластиковых труб
+										</a>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="categories-item">
+										<a class="categories-item__title" href="#">Маски и очки сварщика
+										</a>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="categories-item">
+										<a class="categories-item__title" href="#">Сварочные аппараты
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-2">
+							<button>Все категории</button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sAllCategories-->
 			<div class="soc">
 				<a class="soc__item" href="#" target="_blank">
 					<svg class="icon icon-fb ">
