--- a/public/parts/head.html
+++ b/public/parts/head.html
@@ -13,11 +13,12 @@
 						<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
 						</div>
 						<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Наши работы</a></li>
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Цены</a></li>
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Калькулятор</a></li>
 							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Акции</a></li>
-							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Заказать</a></li>
+							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Оплата</a></li>
+							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Доставка</a></li>
+							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Сервисный центр</a></li>
+							<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Рассрочка</a></li>
 						</ul>
 					</div>
 				</div>
