--- a/public/index.html
+++ b/public/index.html
@@ -2811,17 +2811,32 @@
 				</a>
 			</div>
 			<!-- start sForm-->
-			<section class="sForm section" id="sForm">
-				<div class="container">
-					<div class="section-title text-center">
-						<h2>sForm</h2>
-						<h2>sForm</h2>
-						<h2>sForm</h2>
-						<h2>sForm</h2>
-					</div>
-					<div class="row"></div>
+			<div class="sForm section" id="sForm">
+				<h5>Остались вопросы?</h5>
+				<div class="form-wrap">
+					<form>
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="ФИО:"/>
+								</div>
+								<!-- +e.input-wrap-->
+								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Телефон:"/>
+								</div>
+								<!-- +e.input-wrap-->
+								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="E-mail:"/>
+								</div>
+								<!-- +e.input-wrap-->
+							</div>
+							<div class="col-lg-6">
+								<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваш вопрос:"></textarea>
+								</div>
+								<!-- +e.input-wrap-->
+							</div>
+						</div>
+						<button class="sForm__btn btn">Спросить</button>
+					</form>
 				</div>
-			</section>
+			</div>
 			<!-- end sForm-->
 			<div class="container">
 				<li> 
