--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -1,21 +1,147 @@
 
 <footer class="footer">
 	<div class="container">
-		<div class="row">
-			<div class="col"></div>
-			<div class="col">Footer</div>
-			<div class="col"></div>
-			<div class="col-auto"></div>
+		<div class="footer__top row">
+			<div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+				<div class="footer__title">Кабинет покупателя
+				</div>
+				<ul>
+					<li> <a href="#">Войти</a></li>
+					<li> <a href="#">Регистрация</a></li>
+					<li> <a href="#">Политика конфидециальности</a></li>
+				</ul>
+			</div>
+			<div class="col-3 d-none d-xl-block"></div>
+			<div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+				<div class="footer__title">Информация для покупателя
+				</div>
+				<ul>
+					<li> <a href="#">Сервисный центр</a></li>
+					<li> <a href="#">Отзывы</a></li>
+					<li> <a href="#">Вопросы и ответы</a></li>
+				</ul>
+			</div>
+			<div class="col col-lg-4 col-xl-3">
+				<div class="footer__title">Контакты
+				</div>
+				<address> 
+					<p>г. Москва, Дмитровское шоссе 62с5 </p>
+					<p>Тел.: <a href="tel:+74954773236">+7 495 477 32 36</a></p>
+					<p>E-mail: <a href="mailto:dmitrovka@tehnosadov.ru">dmitrovka@tehnosadov.ru</a></p>
+					<p>ПН-ПТ: с&nbsp;09:00 до&nbsp;20:00</p>
+					<p>СБ-ВС: с&nbsp;10:00 до&nbsp;18:00</p>
+				</address>
+				<p>E-mail: <a href="mailto:info@tehnosadov.ru">info@tehnosadov.ru</a></p>
+			</div>
+		</div>
+		<div class="footer__bottom row">
+			<div class="col">
+				<div class="footer__title">Товары для дома и&nbsp;сада &laquo;Техносадов&raquo; <sup class="reg">&reg;</sup> 2018-2022
+				</div>
+				<p>Сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, определяемой положениями ч.2&nbsp;ст.&nbsp;437&nbsp;ГК РФ. Внешний вид, цвет и&nbsp;характеристики товаров указаны ориентировочно, могут не&nbsp;совпадать с&nbsp;обновленными моделями&nbsp;&mdash; уточняйте информацию у&nbsp;менеджеров при заказе.</p>
+			</div>
+			<div class="col-12 col-lg-auto d-flex align-items-center justify-content-center">
+				<div class="soc">
+					<a class="soc__item" href="https://vk.com/tehnosadov" target="_blank">
+						<svg class="icon icon-vk ">
+							<use xlink:href="img/svg/sprite.svg#vk"></use>
+						</svg>
+					</a>
+					<a class="soc__item" href="https://youtube.com/channel/UC4Q_1trBaz7TReyeksjy7UA" target="_blank">
+						<svg class="icon icon-youtube ">
+							<use xlink:href="img/svg/sprite.svg#youtube"></use>
+						</svg>
+					</a>
+					<a class="soc__item" href="https://t.me/tehnosadov_bot" target="_blank">
+						<svg class="icon icon-telegram ">
+							<use xlink:href="img/svg/sprite.svg#telegram"></use>
+						</svg>
+					</a>
+					<a class="soc__item" href="https://api.whatsapp.com/message/BICUPZKPJ3TRH1" target="_blank">
+						<svg class="icon icon-whatsapp ">
+							<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+						</svg>
+					</a>
+					<a class="soc__item" href="https://ok.ru/group/60953239879731" target="_blank">
+						<svg class="icon icon-ok ">
+							<use xlink:href="img/svg/sprite.svg#ok"></use>
+						</svg>
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </footer>
 <footer class="footer">
 	<div class="container">
-		<div class="row">
-			<div class="col"></div>
-			<div class="col">Footer</div>
-			<div class="col"></div>
-			<div class="col-auto"></div>
+		<div class="footer__top row">
+			<div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+				<div class="footer__title">Кабинет покупателя
+				</div>
+				<ul>
+					<li> <a href="#">Войти</a></li>
+					<li> <a href="#">Регистрация</a></li>
+					<li> <a href="#">Политика конфидециальности</a></li>
+				</ul>
+			</div>
+			<div class="col-3 d-none d-xl-block"></div>
+			<div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+				<div class="footer__title">Информация для покупателя
+				</div>
+				<ul>
+					<li> <a href="#">Сервисный центр</a></li>
+					<li> <a href="#">Отзывы</a></li>
+					<li> <a href="#">Вопросы и ответы</a></li>
+				</ul>
+			</div>
+			<div class="col col-lg-4 col-xl-3">
+				<div class="footer__title">Контакты
+				</div>
+				<address> 
+					<p>г. Москва, Дмитровское шоссе 62с5 </p>
+					<p>Тел.: <a href="tel:+74954773236">+7 495 477 32 36</a></p>
+					<p>E-mail: <a href="mailto:dmitrovka@tehnosadov.ru">dmitrovka@tehnosadov.ru</a></p>
+					<p>ПН-ПТ: с&nbsp;09:00 до&nbsp;20:00</p>
+					<p>СБ-ВС: с&nbsp;10:00 до&nbsp;18:00</p>
+				</address>
+				<p>E-mail: <a href="mailto:info@tehnosadov.ru">info@tehnosadov.ru</a></p>
+			</div>
+		</div>
+		<div class="footer__bottom row">
+			<div class="col">
+				<div class="footer__title">Товары для дома и&nbsp;сада &laquo;Техносадов&raquo; <sup class="reg">&reg;</sup> 2018-2022
+				</div>
+				<p>Сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, определяемой положениями ч.2&nbsp;ст.&nbsp;437&nbsp;ГК РФ. Внешний вид, цвет и&nbsp;характеристики товаров указаны ориентировочно, могут не&nbsp;совпадать с&nbsp;обновленными моделями&nbsp;&mdash; уточняйте информацию у&nbsp;менеджеров при заказе.</p>
+			</div>
+			<div class="col-12 col-lg-auto d-flex align-items-center justify-content-center">
+				<div class="soc">
+					<a class="soc__item" href="https://vk.com/tehnosadov" target="_blank">
+						<svg class="icon icon-vk ">
+							<use xlink:href="img/svg/sprite.svg#vk"></use>
+						</svg>
+					</a>
+					<a class="soc__item" href="https://youtube.com/channel/UC4Q_1trBaz7TReyeksjy7UA" target="_blank">
+						<svg class="icon icon-youtube ">
+							<use xlink:href="img/svg/sprite.svg#youtube"></use>
+						</svg>
+					</a>
+					<a class="soc__item" href="https://t.me/tehnosadov_bot" target="_blank">
+						<svg class="icon icon-telegram ">
+							<use xlink:href="img/svg/sprite.svg#telegram"></use>
+						</svg>
+					</a>
+					<a class="soc__item" href="https://api.whatsapp.com/message/BICUPZKPJ3TRH1" target="_blank">
+						<svg class="icon icon-whatsapp ">
+							<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+						</svg>
+					</a>
+					<a class="soc__item" href="https://ok.ru/group/60953239879731" target="_blank">
+						<svg class="icon icon-ok ">
+							<use xlink:href="img/svg/sprite.svg#ok"></use>
+						</svg>
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </footer>
