--- a/public/02-catalog.html
+++ b/public/02-catalog.html
@@ -847,6 +847,72 @@
 				</div>
 			</section>
 			<!-- end sMainCategories-->
+			<!-- start sAllCategories-->
+			<section class="sAllCategories section" id="sAllCategories">
+				<div class="container sliderAutoWidthWrap">
+					<div class="row">
+						<div class="col-10">
+							<div class="sliderAutoWidth sliderAutoWidth--js swiper">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Снегоуборочные лопаты и движки для снега
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Сварочное оборудование
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для контактной сварки
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для плазменной резки
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для пластика и синтетических материалов
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Аппараты для пластиковых труб
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Маски и очки сварщика
+											</a>
+										</div>
+									</div>
+									<div class="swiper-slide">
+										<div class="categories-item">
+											<a class="categories-item__title" href="#">Сварочные аппараты
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-2">
+							<button class="sAllCategories__show">Все категории
+							</button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sAllCategories-->
 			<footer class="footer">
 				<div class="container">
 					<div class="footer__top row">
