some fix and 04-service-center

--- a/public/05-account-login.html
+++ b/public/05-account-login.html
@@ -14,7 +14,7 @@
 		<link href="libs/ion-rangeslider/css/ion.rangeSlider.min.css" rel="stylesheet"/>
 		<link href="css/main.min.css?v=0.0.1" rel="stylesheet"/>
 	</head>
-	<body>
+	<body class="contact-page" data-bg="02-catalog.png">
 		<div class="main-wrapper">
 			<!-- start topLine-->
 			<div class="topLine section" id="topLine">
@@ -123,20 +123,18 @@
 					<h1>Контакты</h1>
 				</div>
 			</div>
-			<div class="container page-container">
+			<div class="container">
 				<div class="row">
 					<div class="col-lg-2">
 						<div class="sidebar">
 							<ul>
-								<li><a href="#">FAQ</a>
-								</li>
 								<li><a href="#">Отзывы</a>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-lg-10">
-						<div class="mainside">
+						<div class="contacts-wrap">
 							<!-- start sContact-->
 							<div class="sContact" id="sContact">
 								<div class="sContact__block">
