--- a/public/04-service-center-3.html
+++ b/public/04-service-center-3.html
@@ -4,7 +4,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Ремонт аэраторов, скарификаторов и вертикуттеров</title>
+		<title>Ремонт бензопил</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -118,11 +118,11 @@
 									<meta itemprop="position" content="1"/></a></li>
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Сервисный центр</span>
 									<meta itemprop="position" content="2"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Ремонт аэраторов, скарификаторов и вертикуттеров</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Ремонт бензопил</span>
 									<meta itemprop="position" content="3"/></a></li>
 						</ol>
 					</nav>
-					<h1>Ремонт аэраторов, скарификаторов и вертикуттеров</h1>
+					<h1>Ремонт бензопил</h1>
 				</div>
 			</div>
 			<div class="container page-container">
@@ -132,9 +132,9 @@
 							<ul>
 								<li><a href="#">Сервис</a>
 								</li>
-								<li><a class="active" href="#">Ремонт аэраторов, скарификаторов и вертикуттеров</a>
+								<li><a href="#">Ремонт аэраторов, скарификаторов и вертикуттеров</a>
 								</li>
-								<li><a href="#">Ремонт бензопил</a>
+								<li><a class="active" href="#">Ремонт бензопил</a>
 								</li>
 								<li><a href="#">Ремонт газонокосилок</a>
 								</li>
@@ -163,7 +163,7 @@
 						<div class="mainside">
 							<!-- start sService-->
 							<div class="sService" id="sService">
-								<p>Неработоспособность скарификатора может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов скарификатора, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.</p>
+								<p>Неработоспособность бензопилы может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов бензопилы, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.</p>
 								<p><strong>Ориентировочная стоимость основных работ</strong></p>
 								<table>
 									<tr>
@@ -171,44 +171,52 @@
 										<th>Стоимость, руб.</th>
 									</tr>
 									<tr>
-										<td>Диагностика</td>
-										<td>1750</td>
+										<td>Регулировка карбюратора (2 кат. сложности)</td>
+										<td>400</td>
+									</tr>
+									<tr>
+										<td>Замена топливного фильтра (1 кат. сложности)</td>
+										<td>200</td>
 									</tr>
 									<tr>
 										<td>Замена свечи зажигания</td>
 										<td>150</td>
 									</tr>
 									<tr>
-										<td>Замена воздушного фильтра</td>
-										<td>150</td>
+										<td>Замена стартера (5 кат. сложности)</td>
+										<td>870</td>
 									</tr>
 									<tr>
-										<td>Замена масла в двигателе</td>
+										<td>Ремонт крепления натяжителя цепи</td>
+										<td>550</td>
+									</tr>
+									<tr>
+										<td>Замена сцепления</td>
+										<td>700</td>
+									</tr>
+									<tr>
+										<td>Замена топливного бака</td>
+										<td>300</td>
+									</tr>
+									<tr>
+										<td>Ремонт механизма цепи</td>
 										<td>500</td>
 									</tr>
 									<tr>
-										<td>Регулировка карбюратора</td>
-										<td>250</td>
+										<td>Регулировка оборотов (2 кат.сложности)</td>
+										<td>400</td>
 									</tr>
 									<tr>
-										<td>Ремонт / очистка карбюратора в УЗВ</td>
-										<td>2000</td>
+										<td>Заточка цепи (6)</td>
+										<td>300</td>
 									</tr>
 									<tr>
-										<td>Ремонт стартера</td>
-										<td>750</td>
+										<td>Регулировка насоса подачи масла</td>
+										<td>650</td>
 									</tr>
 									<tr>
-										<td>Регулировка зазора катушки зажигания</td>
-										<td>500</td>
-									</tr>
-									<tr>
-										<td>Замена катушки зажигания</td>
-										<td>500</td>
-									</tr>
-									<tr>
-										<td>Регулировка клапанов</td>
-										<td>1750</td>
+										<td>Чистка выхлопной системы</td>
+										<td>1000</td>
 									</tr>
 								</table>
 							</div>
