--- a/public/03-blog.html
+++ b/public/03-blog.html
@@ -110,7 +110,8 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
-			<div class="page-head">
+			<!-- start sBlog-->
+			<section class="sBlog section" id="sBlog">
 				<div class="container">
 					<nav aria-label="breadcrumb">
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
@@ -120,16 +121,153 @@
 									<meta itemprop="position" content="2"/></a></li>
 						</ol>
 					</nav>
-					<h1></h1>
-				</div>
-			</div>
-			<!-- start sBlog-->
-			<section class="sBlog section" id="sBlog">
-				<div class="container">
-					<div class="section-title text-center">
-						<h2>sBlog</h2>
+					<div class="row">
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
+								</a>
+								<div class="blog-item__date">09.02.2022
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Самый проходимый снегоход в глубоком снегу
+								</a>
+								<div class="blog-item__date">30.11.2021
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Профессиональная бензопила для валки леса: рейтинг лучших
+								</a>
+								<div class="blog-item__date">17.09.2021
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Ретинг бензиновых измельчителей веток
+								</a>
+								<div class="blog-item__date">09.02.2022
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
+								</a>
+								<div class="blog-item__date">09.02.2022
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Самый проходимый снегоход в глубоком снегу
+								</a>
+								<div class="blog-item__date">30.11.2021
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Профессиональная бензопила для валки леса: рейтинг лучших
+								</a>
+								<div class="blog-item__date">17.09.2021
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Ретинг бензиновых измельчителей веток
+								</a>
+								<div class="blog-item__date">09.02.2022
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
+								</a>
+								<div class="blog-item__date">09.02.2022
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Самый проходимый снегоход в глубоком снегу
+								</a>
+								<div class="blog-item__date">30.11.2021
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Профессиональная бензопила для валки леса: рейтинг лучших
+								</a>
+								<div class="blog-item__date">17.09.2021
+								</div>
+							</div>
+						</div>
+						<div class="col-6 col-sm-4 col-lg-2">
+							<div class="blog-item">
+								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
+									<div class="blog-item__title">
+									</div>
+								</a>
+								<a class="blog-item__caption" href="#">Ретинг бензиновых измельчителей веток
+								</a>
+								<div class="blog-item__date">09.02.2022
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="row"></div>
+					<button>Показать еще</button>
 				</div>
 			</section>
 			<!-- end sBlog-->
