--- a/public/index.html
+++ b/public/index.html
@@ -2790,7 +2790,7 @@
 						<p>Удобные формы оплаты и&nbsp;быстрая доставка в&nbsp;Москве и&nbsp;по&nbsp;России позволят воспользоваться лучшей садовой техникой в&nbsp;самые сжатые сроки. Максимальная гарантия и&nbsp;современный сервис распространяется на&nbsp;всю продукцию, а&nbsp;в&nbsp;случае поломки бензиновой или электрической техники, вы&nbsp;всегда можете обратиться за&nbsp;помощью к&nbsp;нашим специалистам из&nbsp;сервисного центра. </p>
 						<p>Приглашаем к&nbsp;выгодному сотрудничеству розничных и&nbsp;оптовых покупателей.</p>
 					</div>
-					<button class="sAbout__btn">Подробнее...
+					<button class="sAbout__btn sAbout__btn--js">Подробнее...
 					</button>
 				</div>
 			</section>
