acc block in progress

--- a/public/03-contacts.html
+++ b/public/03-contacts.html
@@ -228,7 +228,7 @@
 												<!-- +e.input-wrap-->
 											</div>
 										</div>
-										<button class="sForm__btn btn">Спросить</button>
+										<button class="sForm__btn btn btn-main">Спросить</button>
 									</form>
 								</div>
 							</div>
