--- a/public/05-account-forget.html
+++ b/public/05-account-forget.html
@@ -139,41 +139,18 @@
 					</div>
 					<div class="col-lg-10">
 						<div class="mainside">
-							<!-- start sAccount-->
 							<div class="sAccount" id="sAccount">
-								<div class="sAccount__login-wrap">
-									<div class="sAccount__login-item">
-										<div class="sAccount__title">Вход в личный кабинет
-										</div>
-										<div class="form-wrap">
-											<form>
-												<div class="form-wrap__input-wrap form-group">
-													<label><span class="form-wrap__input-title">Имя пользователя:</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
-													</label>
-												</div>
-												<!-- +e.input-wrap-->
-												<div class="form-wrap__input-wrap form-group">
-													<label><span class="form-wrap__input-title">Пароль:</span><input class="form-wrap__input form-control" name="password" type="password" placeholder=""/>
-													</label>
-												</div>
-												<!-- +e.input-wrap-->
-												<div class="sAccount__login-btn-wrap"><a class="sAccount__login btn btn-main" href="#">Войти</a><a class="sAccount__link" href="#">Забыли пароль?</a></div>
-											</form>
-										</div>
-									</div>
-									<div class="sAccount__login-item">
-										<div class="sAccount__title">Регистрация нового пользователя
-										</div>
-										<p>Быстро, удобно, легко!</p>
-										<ul> 
-											<li>Используйте введённые ранее данные</li>
-											<li>Отслеживайте статус заказа</li>
-											<li>Получайте персонализированные предложения</li>
-											<li>Один год дополнительной гарантии при регистрации товара</li>
-											<li>Сохраняйте историю заказов</li>
-										</ul>
-										<a class="sAccount__reg btn btn-main" href="#">Зарегистрироваться
-										</a>
+								<div class="sAccount__forget-wrap">
+									<p>Если вы&nbsp;забыли пароль, введите E-Mail.<br />Контрольная строка для смены пароля, а&nbsp;также ваши регистрационные данные, будут высланы вам по&nbsp;E-Mail.</p>
+									<div class="form-wrap">
+										<form>
+											<div class="form-wrap__input-wrap form-group">
+												<label><span class="form-wrap__input-title">E-mail*:</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+												</label>
+											</div>
+											<!-- +e.input-wrap-->
+											<div class="sAccount__login-btn-wrap"><a class="sAccount__send btn btn-main" href="#">Выслать</a><a class="sAccount__link" href="#">Назад</a></div>
+										</form>
 									</div>
 								</div>
 							</div>
