--- a/public/03-contacts.html
+++ b/public/03-contacts.html
@@ -86,6 +86,9 @@
 			<div class="top-nav block-with-lazy">
 				<div class="container">
 					<div class="row">
+						<div class="top-nav__catalog col">
+							<button class="catalog-btn catalog-btn--js"><span></span>Каталог товаров</button>
+						</div>
 						<div class="col order-lg-0 order-last">
 							<div class="menu-mobile menu-mobile--js">
 								<div class="menu-mobile__inner">
@@ -338,7 +341,8 @@
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
-		<script src="libs/swiper/swiper-bundle.min.js"> </script>
+		<script src="libs/swiper/swiper-bundle.min.js"></script>
+		<script src="libs/hc-sticky/hc-sticky.js"></script>
 		<script src="libs/ion-rangeslider/js/ion.rangeSlider.min.js"> </script>
 		<script src="js/common.js?v=0.0.1"></script>
 	</body>
