--- a/public/09-forms-register.html
+++ b/public/09-forms-register.html
@@ -4,7 +4,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Ремонт аэраторов, скарификаторов и вертикуттеров</title>
+		<title>Регистрация</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -119,13 +119,11 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Сервисный центр</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">personal</span>
 									<meta itemprop="position" content="2"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Ремонт аэраторов, скарификаторов и вертикуттеров</span>
-									<meta itemprop="position" content="3"/></a></li>
 						</ol>
 					</nav>
-					<h1>Ремонт аэраторов, скарификаторов и вертикуттеров</h1>
+					<h1>Регистрация</h1>
 				</div>
 			</div>
 			<div class="container page-container">
@@ -133,88 +131,82 @@
 					<div class="col-lg-2">
 						<div class="sidebar">
 							<ul>
-								<li><a href="#">Сервис</a>
+								<li><a class="active" href="#">Личные данные</a>
 								</li>
-								<li><a class="active" href="#">Ремонт аэраторов, скарификаторов и вертикуттеров</a>
+								<li><a href="#">Мои заказы</a>
 								</li>
-								<li><a href="#">Ремонт бензопил</a>
-								</li>
-								<li><a href="#">Ремонт газонокосилок</a>
-								</li>
-								<li><a href="#">Ремонт генераторов и электростанций</a>
-								</li>
-								<li><a href="#">Ремонт измельчителей</a>
-								</li>
-								<li><a href="#">Ремонт кусторезов</a>
-								</li>
-								<li><a href="#">Ремонт минитракторов и райдеров</a>
-								</li>
-								<li><a href="#">Ремонт мотопомп</a>
-								</li>
-								<li><a href="#">Ремонт садовых опрыскивателей</a>
-								</li>
-								<li><a href="#">Ремонт садовых пылесосов и воздуходувок</a>
-								</li>
-								<li><a href="#">Ремонт снегоуборщиков</a>
-								</li>
-								<li><a href="#">Ремонт триммеров</a>
+								<li><a href="#">Выйти</a>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-lg-10">
 						<div class="mainside">
-							<!-- start sService-->
-							<div class="sService" id="sService">
-								<p>Неработоспособность скарификатора может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов скарификатора, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.</p>
-								<p><strong>Ориентировочная стоимость основных работ</strong></p>
-								<table>
-									<tr>
-										<th>Виды работ</th>
-										<th>Стоимость, руб.</th>
-									</tr>
-									<tr>
-										<td>Диагностика</td>
-										<td>1750</td>
-									</tr>
-									<tr>
-										<td>Замена свечи зажигания</td>
-										<td>150</td>
-									</tr>
-									<tr>
-										<td>Замена воздушного фильтра</td>
-										<td>150</td>
-									</tr>
-									<tr>
-										<td>Замена масла в двигателе</td>
-										<td>500</td>
-									</tr>
-									<tr>
-										<td>Регулировка карбюратора</td>
-										<td>250</td>
-									</tr>
-									<tr>
-										<td>Ремонт / очистка карбюратора в УЗВ</td>
-										<td>2000</td>
-									</tr>
-									<tr>
-										<td>Ремонт стартера</td>
-										<td>750</td>
-									</tr>
-									<tr>
-										<td>Регулировка зазора катушки зажигания</td>
-										<td>500</td>
-									</tr>
-									<tr>
-										<td>Замена катушки зажигания</td>
-										<td>500</td>
-									</tr>
-									<tr>
-										<td>Регулировка клапанов</td>
-										<td>1750</td>
-									</tr>
-								</table>
-							</div>
+							<!-- start sRegister-->
+							<section class="sRegister section" id="sRegister">
+								<div class="container">
+									<div class="row">
+										<div class="col-6"> 
+											<div class="form-wrap">
+												<form>
+													<div class="sRegister__title">Регистрация нового пользователя</div>
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__input-title">Имя</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__input-title">Фамилия:</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__input-title">Логин (мин. 3 символа):</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__input-title">Пароль*:</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__input-title">Подтверждение пароля*:</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__input-title">E-Mail*:</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+													<div class="form-wrap__input-wrap form-group">
+														<label><span class="form-wrap__input-title">Защита от автоматической регистрации*:</span><input class="form-wrap__input form-control" name="text" type="text" placeholder=""/>
+														</label>
+													</div>
+													<!-- +e.input-wrap-->
+													<div class="form-wrap__btn-wrap">
+														<button class="sRegister__btn btn">Регистрация</button><a href="#">Вход</a>
+													</div>
+												</form>
+											</div>
+										</div>
+										<div class="col-6">
+											<div class="sRegister__title">Зарегистрируйтесь
+											</div>
+											<p>и&nbsp;Вы получите возможность:</p>
+											<ul> 
+												<li>Используйте введённые ранее данные</li>
+												<li>Отслеживайте статус заказа</li>
+												<li>Получайте персонализированные предложения</li>
+												<li>Один год дополнительной гарантии при регистрации товара</li>
+												<li>Сохраняйте историю заказов</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</section>
+							<!-- end sRegister-->
 						</div>
 					</div>
 				</div>
