--- a/public/parts/head.html
+++ b/public/parts/head.html
@@ -7,6 +7,9 @@
 <div class="top-nav block-with-lazy">
 	<div class="container">
 		<div class="row">
+			<div class="top-nav__catalog col">
+				<button class="catalog-btn catalog-btn--js"><span></span>Каталог товаров</button>
+			</div>
 			<div class="col order-lg-0 order-last">
 				<div class="menu-mobile menu-mobile--js">
 					<div class="menu-mobile__inner">
