--- a/public/10-basket.html
+++ b/public/10-basket.html
@@ -4,7 +4,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Ремонт измельчителей</title>
+		<title>Моя корзина</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -14,7 +14,7 @@
 		<link href="libs/ion-rangeslider/css/ion.rangeSlider.min.css" rel="stylesheet"/>
 		<link href="css/main.min.css?v=0.0.1" rel="stylesheet"/>
 	</head>
-	<body>
+	<body class="main-page" data-bg="02-catalog.png">
 		<div class="main-wrapper">
 			<!-- start topLine-->
 			<div class="topLine section" id="topLine">
@@ -119,110 +119,108 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Сервисный центр</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Корзина</span>
 									<meta itemprop="position" content="2"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Ремонт измельчителей</span>
-									<meta itemprop="position" content="3"/></a></li>
 						</ol>
 					</nav>
-					<h1>Ремонт измельчителей</h1>
+					<h1>Моя корзина</h1>
 				</div>
 			</div>
-			<div class="container page-container">
-				<div class="row">
-					<div class="col-lg-2">
-						<div class="sidebar">
-							<ul>
-								<li><a href="#">Сервис</a>
-								</li>
-								<li><a href="#">Ремонт аэраторов, скарификаторов и вертикуттеров</a>
-								</li>
-								<li><a href="#">Ремонт бензопил</a>
-								</li>
-								<li><a href="#">Ремонт газонокосилок</a>
-								</li>
-								<li><a href="#">Ремонт генераторов и электростанций</a>
-								</li>
-								<li><a class="active" href="#">Ремонт измельчителей</a>
-								</li>
-								<li><a href="#">Ремонт кусторезов</a>
-								</li>
-								<li><a href="#">Ремонт минитракторов и райдеров</a>
-								</li>
-								<li><a href="#">Ремонт мотопомп</a>
-								</li>
-								<li><a href="#">Ремонт садовых опрыскивателей</a>
-								</li>
-								<li><a href="#">Ремонт садовых пылесосов и воздуходувок</a>
-								</li>
-								<li><a href="#">Ремонт снегоуборщиков</a>
-								</li>
-								<li><a href="#">Ремонт триммеров</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-10">
-						<div class="mainside">
-							<!-- start sService-->
-							<div class="sService" id="sService">
-								<p>Неработоспособность садового измельчителя может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов садового измельчителя, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.</p>
-								<p><strong>Ориентировочная стоимость основных работ</strong></p>
-								<table>
-									<tr>
-										<th>Виды работ</th>
-										<th>Стоимость, руб.</th>
-									</tr>
-									<tr>
-										<td>Диагностика</td>
-										<td>1750</td>
-									</tr>
-									<tr>
-										<td>Замена свечи зажигания</td>
-										<td>150</td>
-									</tr>
-									<tr>
-										<td>Замена воздушного фильтра</td>
-										<td>150</td>
-									</tr>
-									<tr>
-										<td>Замена масла в двигателе</td>
-										<td>500</td>
-									</tr>
-									<tr>
-										<td>Регулировка карбюратора</td>
-										<td>250</td>
-									</tr>
-									<tr>
-										<td>Ремонт / очистка карбюратора в УЗВ</td>
-										<td>2000</td>
-									</tr>
-									<tr>
-										<td>Ремонт стартера</td>
-										<td>750</td>
-									</tr>
-									<tr>
-										<td>Регулировка зазора катушки зажигания</td>
-										<td>500</td>
-									</tr>
-									<tr>
-										<td>Замена катушки зажигания</td>
-										<td>500</td>
-									</tr>
-									<tr>
-										<td>Регулировка клапанов</td>
-										<td>1750</td>
-									</tr>
-									<tr>
-										<td>Замена ножа</td>
-										<td>1250</td>
-									</tr>
-								</table>
-							</div>
-						</div>
+			<!-- start sBasket-->
+			<section class="sBasket section" id="sBasket">
+				<div class="container">
+					<table class="table table-borderless">
+						<thead class="table-dark">
+							<tr>
+								<th class="text-start" colspan="2">Товар</th>
+								<th>Артикул</th>
+								<th>Количество</th>
+								<th>Вес</th>
+								<th>Цена</th>
+								<th> </th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="basket-item">
+								<td class="basket-item__img-wrap"><a href="#"><img src="img/basket-1.jpg" alt="" loading="lazy"/></a>
+								</td>
+								<td class="basket-item__title">
+									<a class="basket-item__name" href="#">Штыковая укороченная лопата FISKARS SolidTM 1026667
+									</a>
+								</td>
+								<td class="basket-item__number">1026667
+								</td>
+								<td class="basket-item__count">
+									<div class="addBlock">
+										<button class="addBlock__btn addBlock__btn--minus" type="button">
+										</button>
+										<input type="text" value="1"/>
+										<button class="addBlock__btn addBlock__btn--plus" type="button">
+										</button>
+									</div>
+								</td>
+								<td class="basket-item__weight">0 кг
+								</td>
+								<td class="basket-item__price">850 руб.
+								</td>
+								<td class="basket-item__delete">
+									<button class="basket-item__remove-btn">
+										<svg class="icon icon-close ">
+											<use xlink:href="img/svg/sprite.svg#close"></use>
+										</svg>
+									</button>
+								</td>
+							</tr>
+							<tr class="basket-item">
+								<td class="basket-item__img-wrap"><a href="#"><img src="img/basket-2.jpg" alt="" loading="lazy"/></a>
+								</td>
+								<td class="basket-item__title">
+									<a class="basket-item__name" href="#">Аккумуляторная газонокосилка PATRIOT РТ 330 Li
+									</a>
+								</td>
+								<td class="basket-item__number">512300330
+								</td>
+								<td class="basket-item__count">
+									<div class="addBlock">
+										<button class="addBlock__btn addBlock__btn--minus" type="button">
+										</button>
+										<input type="text" value="1"/>
+										<button class="addBlock__btn addBlock__btn--plus" type="button">
+										</button>
+									</div>
+								</td>
+								<td class="basket-item__weight">0 кг
+								</td>
+								<td class="basket-item__price">12290 руб.
+								</td>
+								<td class="basket-item__delete">
+									<button class="basket-item__remove-btn">
+										<svg class="icon icon-close ">
+											<use xlink:href="img/svg/sprite.svg#close"></use>
+										</svg>
+									</button>
+								</td>
+							</tr>
+						</tbody>
+						<thead class="table-dark">
+							<tr>
+								<th class="text-end" colspan="3">Итого</th>
+								<th>2 шт.</th>
+								<th>0 кг</th>
+								<th class="text-end">13 140 руб.</th>
+								<th> </th>
+							</tr>
+						</thead>
+					</table>
+					<div class="sBasket__buttons">
+						<a class="sBasket__btn sBasket__btn--dark" href="#">Очистить корзину
+						</a>
+						<a class="sBasket__btn sBasket__btn--green" href="#">Оформить
+						</a>
 					</div>
 				</div>
-			</div>
+			</section>
+			<!-- end sBasket-->
 			<footer class="footer">
 				<div class="container">
 					<div class="footer__top row">
